overflow fixed

--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -82,6 +82,10 @@ body {
 
 p {
   padding: 0em 2.5em;
+}
+
+.text {
+  height: 90%;
   overflow: hidden;
 }
 
